--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-    "name": "point-of-sale-frontend",
+    "name": "@softwarefactory/common-ui",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/lab": "^5.0.0-alpha.89",
+        "@mui/material": "^5.8.7",
+        "@nivo/core": "^0.79.0",
+        "@nivo/pie": "^0.79.1",
+        "@tabler/icons": "^1.72.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
@@ -10,10 +18,12 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "date-fns": "^2.28.0",
+        "node-sass": "^7.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.33.1",
         "react-scripts": "5.0.1",
-        "sass": "^1.53.0",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0"
     },
@@ -22,20 +32,23 @@
         "build": "react-scripts build",
         "lint": "eslint",
         "lint:fix": "eslint --fix",
-        "format": "yarn prettier --write ."
+        "format": "yarn prettier --write .",
+        "storybook": "start-storybook -p 6006 -s public",
+        "build-storybook": "build-storybook -s public"
     },
     "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
+        "extends": ["react-app", "react-app/jest"],
+        "overrides": [
+            {
+                "files": ["**/*.stories.*"],
+                "rules": {
+                    "import/no-anonymous-default-export": "off"
+                }
+            }
         ]
     },
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
+        "production": [">0.2%", "not dead", "not op_mini all"],
         "development": [
             "last 1 chrome version",
             "last 1 firefox version",
@@ -43,10 +56,28 @@
         ]
     },
     "devDependencies": {
+        "@storybook/addon-actions": "^6.5.9",
+        "@storybook/addon-essentials": "^6.5.9",
+        "@storybook/addon-interactions": "^6.5.9",
+        "@storybook/addon-links": "^6.5.9",
+        "@storybook/builder-webpack5": "^6.5.9",
+        "@storybook/manager-webpack5": "^6.5.9",
+        "@storybook/node-logger": "^6.5.9",
+        "@storybook/preset-create-react-app": "^4.1.2",
+        "@storybook/react": "^6.5.9",
+        "@storybook/testing-library": "^0.0.13",
+        "babel-plugin-named-exports-order": "^0.0.2",
         "eslint": "^8.19.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-storybook": "^0.5.13",
         "eslint-plugin-unused-imports": "^2.0.0",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "prop-types": "^15.8.1",
+        "typescript-plugin-css-modules": "^3.4.0",
+        "webpack": "^5.73.0"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
     }
 }
