--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@softwarefactory/common-ui",
-    "version": "0.1.0",
-    "private": true,
+    "version": "1.0.0",
+    "private": false,
     "dependencies": {
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
@@ -37,10 +37,15 @@
         "build-storybook": "build-storybook -s public"
     },
     "eslintConfig": {
-        "extends": ["react-app", "react-app/jest"],
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ],
         "overrides": [
             {
-                "files": ["**/*.stories.*"],
+                "files": [
+                    "**/*.stories.*"
+                ],
                 "rules": {
                     "import/no-anonymous-default-export": "off"
                 }
@@ -48,7 +53,11 @@
         ]
     },
     "browserslist": {
-        "production": [">0.2%", "not dead", "not op_mini all"],
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
         "development": [
             "last 1 chrome version",
             "last 1 firefox version",
