--- a/package.json
+++ b/package.json
@@ -32,14 +32,10 @@
         "build-storybook": "build-storybook -s public"
     },
     "eslintConfig": {
-        "extends": [
-            "react-app"
-        ],
+        "extends": ["react-app"],
         "overrides": [
             {
-                "files": [
-                    "**/*.stories.*"
-                ],
+                "files": ["**/*.stories.*"],
                 "rules": {
                     "import/no-anonymous-default-export": "off"
                 }
@@ -47,11 +43,7 @@
         ]
     },
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
+        "production": [">0.2%", "not dead", "not op_mini all"],
         "development": [
             "last 1 chrome version",
             "last 1 firefox version",
